@@ -1,3 +1,7 @@
+2011-07-27  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/dialogs.R: forgot to pass parent along in galert
+
 2011-07-26  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gslider.R (gslider): added length.out, along.with arguments
